--- a/css/style.css
+++ b/css/style.css
@@ -131,11 +131,11 @@ img {
  
 @media screen and (max-width: 768px) {
     .container{
-        max-width: 768px;
+        width: 100%;
     }
 }
 
-@media screen and (max-width:480px) {
+/*@media screen and (max-width:480px) {
     .why-us{
         background-color: #222222;
         margin: 0rem;
@@ -148,7 +148,6 @@ img {
     }
 
     .container{
-        max-width: 480px;
     }
 
         .row{
@@ -171,5 +170,20 @@ img {
 
     .text{
         padding-bottom: 30px;
+    }
+*/
+
+@media screen and (max-width: 480px){
+    .container{
+        max-width: 100%;
+    }
+
+    .row{
+        display: block;
+    }
+
+    .col{
+        min-width: 100%;
+       margin-bottom: 40px; 
     }
 }
